# test_aiti

./: .env  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
src/test_aiti/: run.py
src/test_aiti/application/: errors.py
src/test_aiti/application/interactors/: add_product_to_order.py
src/test_aiti/application/interfaces/: nomenclature_data_gateway.py  order_data_gateway.py  order_item_data_gateway.py  order_item_id_genrator.py  transaction_manager.py
src/test_aiti/entrypoint/: config.py  ioc.py  setup.py
src/test_aiti/infrastructure/adapters/: nomenclature_data_mapper_sqla.py  order_data_mapper_sqla.py  order_item_data_mapper_sqla.py  order_item_id_generator_uuid.py  transaction_manager_sqla.py
src/test_aiti/infrastructure/persistence_sqla/: map.py  orm_registry.py
src/test_aiti/infrastructure/persistence_sqla/mappings/: category.py  client.py  nomenclature.py  order.py  order_item.py
src/test_aiti/infrastructure/persistence_sqla/migrations/: env.py
src/test_aiti/infrastructure/persistence_sqla/migrations/versions/: 6c7a46cad16f_init.py
src/test_aiti/models/: category.py  client.py  nomenclature.py  order.py  order_item.py
src/test_aiti/presentation/http/: order.py  root_router.py
