[project]
name = "test-aiti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "dotenv>=0.9.9",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy[asyncio]>=2.0.46",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "I",  
]
