[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "test_aiti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "dishka>=1.7.2",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.128.0",
    "gunicorn>=24.1.1",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy[asyncio]>=2.0.46",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.14",
]


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "I",  
]

[tool.setuptools]
packages = ["test_aiti"]

[tool.setuptools.package-dir]
"" = "src"
